# ebola-bundibugyo-tracker-2026

./: .gitignore  LICENSE-CODE  LICENSE-DATA  METHODOLOGY.md  README.md  index.html  pyproject.toml  requirements.txt
data/: country_breakdown.csv  declarations.csv  notes.md  story.md  timeseries.csv
outputs/: ebola_timeseries.xlsx
src/: build_xlsx.py  generate_charts.py  validate.py
